--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^15.5.0",
     "react-redux": "^4.4.0",
     "react-router": "^3.0.0",
+    "react-transition-group": "^1.1.3",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
   },
